# btc_recovery

./: .gitignore  BITCOIN_CHANGES.md  Cargo.toml  DATABASE_INFO.md  Dockerfile  NEXT_STEPS.md  QUICKSTART.md  README.md  SETUP.md  SETUP_BITCOIN.md  STATUS.md  VAST_AI_DEPLOYMENT.md  add_address.js  add_btc_address.js  add_test_address.py  check_btc_db.js  check_db.js  config.json  convert_to_bitcoin.py  create_db.js  docker-compose.yml  fix_db.js  get_word_indices.js  kernel_debug.cl  test_search.js
cl/: address.cl  bip39_checksum.cl  btc_address.cl  common.cl  db_lookup.cl  eth_address.cl  eth_recovery_kernel.cl  eth_recovery_main.cl  int_to_address.cl  just_address.cl  just_seed.cl  keccak256.cl  mnemonic_constants.cl  mnemonic_generator.cl  pbkdf2_bip39.cl  ripemd.cl  secp256k1.cl  secp256k1_common.cl  secp256k1_field.cl  secp256k1_group.cl  secp256k1_prec.cl  secp256k1_scalar.cl  sha2.cl
deploy/: DEPLOYMENT_CHECKLIST.md  DEPLOY_INSTRUCTIONS.md  QUICK_START.md  README.md  create_orchestrator_service.sh  orchestrator_setup.sh  restart_worker.sh  update_and_restart.sh  vast_onstart_inline.sh  vast_worker_startup.sh  ГОТОВЫЙ_СКРИПТ.md
src/: db_loader.rs  main.rs  main.rs.eth_working_copy
